--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    
 </head>
+
 <body>
-    <div id="container">
-        <div class="wrap1">
-            
+    <div id="container" style="display: none;">
+        <div class="wrap0 slide">
+            <div class="header animated " data-animate="bounceInLeft">hello 你好我是横着的scrollpage</div>
+            <div class="animated " data-animate="bounceInRight">hello 你好我是横着的scrollpage</div>
+        </div>
+        <div class="wrap1 slide">
+            <div class="header animated " data-animate="bounceInLeft">hello animate</div>
+        </div>
+        <div class="wrap2 slide">
+            <div class="header animated " data-animate="bounceInLeft">hello animate</div>
         </div>
     </div>
     <script src="./dist/scrollpage-dist.js"></script>
 </body>
+
 </html>
